--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@hennge/vue3-pagination": "^1.0.17",
+    "axios": "^0.21.4",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "font-awesome": "^4.7.0",
+    "nprogress": "^0.2.0",
+    "vee-validate": "^4.4.10",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.11",
+    "vue-sweetalert2": "^4.3.1",
+    "vuex": "^4.0.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
